# Qt-SQL-API-Testing-APP

./: .gitignore  CMakeLists.txt  main.cpp
Interface/: interface.h  ui_deisgner_qtsqlapp.ui
Interface_Functions/: api_funcs.cpp  api_funcs.h  interface_functions.cpp  interface_functions.h  sqlite_funcs.cpp  sqlite_funcs.h
database/: test.db
